# attrimpl

./: Cargo.toml  LICENSE  README.md
src/: access_params.rs  args.rs  directive.rs  directives.rs  get_mut_params.rs  get_params.rs  item.rs  lib.rs  syn_field.rs  syn_item_enum.rs  syn_item_struct.rs  syn_variant.rs
tests/: compilation.rs  enums.rs  named_structs.rs  structs.rs  tuple_structs.rs  tuples.rs
