[package]
name = "attrimpl"
version = "0.5.0"
edition = "2024"
license = "MIT"
description = "The crate provides attributes to automatically implement common traits and reduce boilerplate code."
repository = "https://github.com/bytifex/attrimpl.git"
readme = "README.md"
keywords = ["macro", "traits", "boilerplate", "getter", "setter"]

[dependencies]
quote = "1.0.41"
proc-macro2 = "1.0.103"
syn = { version = "2.0.108", features = ["full"] }

[lib]
proc-macro = true
